Added close all command

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,8 @@
 </head>
 <body>
 
-<a href="#config" id='openConfig' style='margin-left: 10px;'>Config</a>
+<a href="#config" id='openConfig' style='margin-left: 10px;'>Config</a> |
+<a href="#closeAll" id='closeAll' style='margin-left: 10px;'>Close All</a>
 <div id='configSection' style='display: none; margin-left: 10px;'>
   Login <input id='login'>
   &nbsp;&nbsp;&nbsp;
